config/deployments/dra/daemonset.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: intel-gpu-resource-driver-kubelet-plugin
  namespace: intel-gpu-resource-driver
  labels:
    app: intel-gpu-resource-driver-kubelet-plugin
spec:
  selector:
    matchLabels:
      app: intel-gpu-resource-driver-kubelet-plugin
  template:
    metadata:
      labels:
        app: intel-gpu-resource-driver-kubelet-plugin
    spec:
      serviceAccount: intel-gpu-resource-driver-service-account
      serviceAccountName: intel-gpu-resource-driver-service-account
      containers:
      - name: kubelet-plugin
        image: ghcr.io/intel/intel-resource-drivers-for-kubernetes/intel-gpu-resource-driver:v0.9.0
        imagePullPolicy: IfNotPresent
        command: ["/kubelet-gpu-plugin"]
        volumeMounts:
        - name: plugins-registry
          mountPath: /var/lib/kubelet/plugins_registry
        - name: plugins
          mountPath: /var/lib/kubelet/plugins
        - name: cdi
          mountPath: /etc/cdi
        - name: varruncdi
          mountPath: /var/run/cdi
        - name: xpumdrundir
          mountPath: /run/xpumd
        # when using fake sysfs - mount at the same place as on host
        - name: sysfs
          mountPath: "/sysfs"
        # Only use devdri when using fake devfs with device-faker
        #- name: devdri
        #  mountPath: "/tmp/test-0123456789/dev/dri"
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop: [ "ALL" ]
          readOnlyRootFilesystem: true
          runAsUser: 0
          seccompProfile:
            type: RuntimeDefault
      volumes:
      - name: plugins-registry
        hostPath:
          path: /var/lib/kubelet/plugins_registry
      - name: plugins
        hostPath:
          path: /var/lib/kubelet/plugins
      - name: cdi
        hostPath:
          path: /etc/cdi
      - name: varruncdi
        hostPath:
          path: /var/run/cdi
      - name: sysfs
        hostPath:
          path: /sys
      - name: xpumdrundir
        hostPath:
          path: /run/xpumd
          type: DirectoryOrCreate
      # Only use devdri when using fake devfs with device-faker
      #- name: devdri
      #  hostPath:
      #    path: /tmp/test-0123456789/dev/dri
